# EvoClaw

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  PLAN.md  README.md  WORKFLOW.md  config.toml  pyproject.toml
prompts/: system.md
src/evoclaw/: __main__.py  config.py  daemon.py  lifecycle.py  llm.py  log.py  tools.py  world.py
tests/: conftest.py  test_config.py  test_daemon.py  test_integration.py  test_lifecycle.py  test_llm.py  test_log.py  test_tools.py  test_world.py
