[project]
name = "evoclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["openai", "structlog", "httpx"]

[project.scripts]
evoclaw = "evoclaw.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evoclaw"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
